syntax = "proto2";

package Identifiers;

option java_package = "org.obiba.opal.web.model";

message IdentifiersMappingDto {
  required string name = 1;
  repeated string entityTypes = 2;
}

message IdentifiersMappingConfigDto {
  optional string name = 1;
  optional bool allowIdentifierGeneration = 2 [default = false];
  optional bool ignoreUnknownIdentifier = 3 [default = false];
}

message IdentifierSuggestions {
  required string entityType = 1;
  required string query = 2;
  required uint32 limit = 3;
  repeated string identifiers = 4;
}